--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tensorflow/tfjs-core": "^4.22.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.562.0",
     "matter-js": "^0.20.0",
